@@ -19,8 +19,11 @@ $this->menu=array(
 		array(
 			'type' => 'raw',
 			'name' => Yii::t('UserModule.user', 'from'),
-			'value' => 'CHtml::link($data->from_user->username, array("Yum::route(\'{user}/profile\')", "id" => $data->from_user_id))'
-		),
+			'value' => 'CHtml::link($data->from_user->username, array(
+					Yum::route(\'{user}/profile\'),
+					"id" => $data->from_user_id)
+				)'
+			),
 		array(
 			'type' => 'raw',
 			'name' => Yii::t('UserModule.user', 'title'),
